# vega-lite

./: Makefile  README.md  dune-project  index.md  vega-lite.opam
.github/workflows/: gh-pages.yml  main.yml
dev/: index.html
dev/vega-lite/: index.html
dev/vega-lite/Vega_lite/: index.html
dev/vega-lite/Vega_lite/Aggregate/: index.html
dev/vega-lite/Vega_lite/Config/: index.html
dev/vega-lite/Vega_lite/Data/: index.html
dev/vega-lite/Vega_lite/Data_format/: index.html
dev/vega-lite/Vega_lite/Encoding/: index.html
dev/vega-lite/Vega_lite/Input/: index.html
dev/vega-lite/Vega_lite/Mark/: index.html
dev/vega-lite/Vega_lite/Param/: index.html
dev/vega-lite/Vega_lite/Selection/: index.html
dev/vega-lite/Vega_lite/Transform/: index.html
dev/vega-lite/Vega_lite/Values/: index.html
dev/vega-lite/Vega_lite/Values/Col/: index.html
dev/vega-lite/Vega_lite/Values/Row/: index.html
dev/vega-lite/Vega_lite/Viz/: index.html
src/: dune  vega_lite.ml  vega_lite.mli
tests/: dune  t1.expected.json  t1.ml
